[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Perk Shop/Perk shop.png" type="Texture" id=1]
[ext_resource path="res://Sound/Music/Kevin-MacLeodBackbay-Lounge.wav" type="AudioStream" id=2]
[ext_resource path="res://Main scenes/PerkShopInterface.gd" type="Script" id=3]
[ext_resource path="res://Sound/SFX/Text pop.wav" type="AudioStream" id=4]

[node name="PerkShopInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpriteTexture" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
hframes = 10
frame = 1

[node name="AfterElipses" type="Timer" parent="."]
one_shot = true

[node name="BackbayLounge" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -17.0

[node name="FirstSpeechDelay" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TextPop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[connection signal="timeout" from="AfterElipses" to="." method="_on_AfterElipses_timeout"]
[connection signal="timeout" from="FirstSpeechDelay" to="." method="_on_FirstSpeechDelay_timeout"]
